# korea-geovariable

./: .env.template  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Dockerfile.bun  Dockerfile.python  LICENSE  README.md  border_based_calculations_by_year.py  bun.lockb  celery_app.py  docker-compose.yml  index.html  main.py  mkdocs.yml  nginx.conf  package-lock.json  package.json  point_based_calculations.py  pyproject.toml  tasks.py  test_main.py  testcsv.csv  vite.config.ts
.github/workflows/: deploy-docs.yml
docs/: index.md
docs/api/: border-based-calculations.md  point-based-calculations.md
docs/development/: architecture.md  code-style.md  contributing.md  database.md  deployment.md  release-process.md  testing.md  troubleshooting.md
docs/getting-started/: configuration.md  database-setup.md  installation.md
docs/usage/: basic-usage.md  calculators.md  examples.md
scripts/: raster_to_postgis.sh  relative_dem_donut_1000.sql  relative_dem_donut_5000.sql  relative_dsm_donut_1000.sql  relative_dsm_donut_5000.sql  vector_to_postgis.sh
src/: App.tsx  main.tsx
src/components/: ApiCategorySelector.tsx  ApiEndpointSelector.tsx  ApiTestForm.tsx  ApiTestResults.tsx  CSVCalculationForm.tsx  FileList.tsx  FileUploader.tsx  Header.tsx  LanguageSwitcher.tsx  PointCalculationForm.tsx  PointCalculationResults.tsx  ProtectedRoute.tsx
src/components/ui/: breadcrumb.tsx  form.tsx  select.tsx  sheet.tsx  sidebar.tsx
src/contexts/: AuthContext.tsx
src/i18n/: config.ts
src/i18n/en/: translation.ts
src/i18n/ko/: translation.ts
src/integrations/supabase/: client.ts  types.ts
src/pages/: Auth.tsx  CoordinateFiles.tsx  Dashboard.tsx  Index.tsx  Landing.tsx  PointCalculations.tsx
src/services/: apiService.ts
src/types/: supabase.ts
supabase/: config.toml
