[project]
name = "korea-geovariable"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp~=3.9.0",
    "altair~=5.2.0",
    "beautifulsoup4~=4.10.0",
    "dou-utils>=0.1.7",
    "dropbox~=11.36.2",
    "geoalchemy2~=0.14.3",
    "geopandas~=0.14.2",
    "matplotlib~=3.8.2",
    "numpy~=1.26.3",
    "openpyxl~=3.1.2",
    "pandas~=2.1.4",
    "pillow~=9.5.0",
    "plotly~=5.18.0",
    "psycopg2-binary~=2.9.9",
    "pydantic>=2.7.4",
    "python-dotenv~=1.0.0",
    "requests~=2.26.0",
    "scipy>=1.14.1",
    "sqlmodel~=0.0.19",
    "streamlit~=1.27.0",
    "tqdm>=4.66.5",
]

[tool.uv]
dev-dependencies = [
    "pre-commit>=3.7.1",
    "ruff>=0.8.0",
    "interrogate~=1.5.0",
    "mkdocs~=1.5.3",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff]
line-length = 88
indent-width=4
target-version = "py311"

[tool.ruff.lint]
extend-select = ["I", "U"]
select = ["E4", "E7", "E9", "F"]
ignore = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
