[project]
name = "korea-geovariable"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dou-utils>=0.1.8",
    "geoalchemy2>=0.14.3",
    "geopandas>=0.14.2",
    "matplotlib>=3.8.2",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.9",
    "numpy>=1.26.3",
    "openpyxl>=3.1.2",
    "pandas>=2.1.4",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.7.4",
    "python-dotenv>=1.0.0",
    "scipy>=1.14.1",
    "tqdm>=4.66.5",
]

[tool.uv]
dev-dependencies = [
    "pre-commit>=3.7.1",
    "ruff>=0.8.0"
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff]
line-length = 88
indent-width=4
target-version = "py311"

[tool.ruff.lint]
extend-select = ["I", "U"]
select = ["E4", "E7", "E9", "F"]
ignore = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
